Use public HTTPS URLs with local bind on 127.0.0.1
- API: https://server.infinitericks.com (bind 127.0.0.1:40002)
- Explorer: https://serverexplorer.infinitericks.com (bind 127.0.0.1:40051)
- RickServer/RickExplorerServer listen on BIND_HOST default 127.0.0.1
- Pin TLS per request host for API and explorer domains
- Update scripts, docs, and nginx reverse-proxy examples

Co-authored-by: 2x2devcode <2x2devcode@users.noreply.github.com>